tabs and routing adjustment

--- a/src/app/locations/offers/offers.page.html
+++ b/src/app/locations/offers/offers.page.html
@@ -1,9 +1,26 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>offers</ion-title>
+    <ion-title>Offers</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<div id="container">
+  <ion-content>
+    <ion-tab-bar>
+    <ion-tabs>
+        <ion-tab-button tab="new">
+          <ion-label>New</ion-label>
+          <ion-icon name="new"></ion-icon>
+        </ion-tab-button>
+        <ion-tab-button tab="edit">
+          <ion-label>Offers</ion-label>
+          <ion-icon name="edit"></ion-icon>
+        </ion-tab-button>
+        <ion-tab-button tab="bookings">
+          <ion-label>Bookings</ion-label>
+          <ion-icon name="list"></ion-icon>
+        </ion-tab-button>
+    </ion-tabs>
+    </ion-tab-bar>
+  </ion-content>
+</div>
