--- a/src/app/locations/locations.page.html
+++ b/src/app/locations/locations.page.html
@@ -5,5 +5,20 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="locations">
+        <ion-label>Locations</ion-label>
+        <ion-icon name="search"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button tab="offers">
+        <ion-label>Offers</ion-label>
+        <ion-icon name="card"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button tab="bookings">
+        <ion-label>Bookings</ion-label>
+        <ion-icon name="menu"></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
