--- a/src/app/locations/locations.page.html
+++ b/src/app/locations/locations.page.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>locations</ion-title>
+    <ion-title>Locations</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="locations">
-        <ion-label>Locations</ion-label>
+      <ion-tab-button tab="discover">
+        <ion-label>Discover</ion-label>
         <ion-icon name="search"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="offers">
