--- a/src/app/locations/offers/offers.page.html
+++ b/src/app/locations/offers/offers.page.html
@@ -13,7 +13,7 @@
           <ion-icon name="new"></ion-icon>
         </ion-tab-button>
         <ion-tab-button tab="edit">
-          <ion-label>Offers</ion-label>
+          <ion-label>Edit</ion-label>
           <ion-icon name="edit"></ion-icon>
         </ion-tab-button>
         <ion-tab-button tab="bookings">
