--- a/src/app/locations/discover/details/details.page.html
+++ b/src/app/locations/discover/details/details.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>details</ion-title>
+    <ion-title>Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
